@@ -1,3 +1,9 @@
+2007-06-06  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/gutils.c (g_get_user_special_dir): Fall back to
+	$HOME/Desktop for the DESKTOP directory, like 
+	xdg_user_dir_lookup() does.
+
 2007-06-05  Matthias Clasen  <mclasen@redhat.com>
 
 	* configure.in: Bump version
